--- a/Client/package.json
+++ b/Client/package.json
@@ -14,12 +14,14 @@
     "ajv-keywords": "^5.1.0",
     "axios": "^1.7.5",
     "chart.js": "^4.4.4",
+    "formik": "^2.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
