--- a/Server/package.json
+++ b/Server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb": "^6.10.0",
-    "mongoose": "^8.4.1"
+    "mongodb": "^6.11.0",
+    "mongoose": "^8.4.1",
+    "nodemon": "^3.1.7"
   }
 }
