--- a/Client/package.json
+++ b/Client/package.json
@@ -5,6 +5,10 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.15.19",
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,9 +16,11 @@
     "@testing-library/user-event": "^13.5.0",
     "ajv": "^8.14.0",
     "ajv-keywords": "^5.1.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "chart.js": "^4.4.4",
     "formik": "^2.4.6",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
@@ -48,6 +54,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.16"
   }
 }
