--- a/Client/package.json
+++ b/Client/package.json
@@ -16,10 +16,12 @@
     "chart.js": "^4.4.4",
     "formik": "^2.4.6",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
+    "react-tooltip": "^5.28.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -48,6 +50,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.16"
   }
 }
