--- a/Client/package.json
+++ b/Client/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
