--- a/Client/package.json
+++ b/Client/package.json
@@ -19,6 +19,8 @@
     "axios": "^1.7.5",
     "chart.js": "^4.4.4",
     "formik": "^2.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
