--- a/Server/package.json
+++ b/Server/package.json
@@ -21,7 +21,6 @@
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.4.1",
-    "nodemon": "^3.1.9"
+    "mongoose": "^8.4.1"
   }
 }
